--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -81,9 +81,12 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
     "jsdom": "^25.0.1",
+    "nodemailer": "^6.10.0",
+    "nuxt-nodemailer": "^1.1.2",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.10",
     "prisma": "^6.4.1",
+    "vite": "^6.2.0",
     "vue-tsc": "^2.2.8"
   },
   "packageManager": "pnpm@9.15.4",
