--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -23,12 +23,16 @@
     "seed": "node prisma/seed.mjs"
   },
   "dependencies": {
+    "@node-rs/argon2": "^1.8.0",
     "@nuxt/eslint": "^1.0.0",
     "@nuxt/fonts": "^0.10.3",
+    "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.9.0",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/i18n": "9.0.0",
     "@nuxtjs/seo": "2.0.0-rc.23",
     "@nuxtjs/sitemap": "6.1.5",
+    "@nuxtjs/tailwindcss": "^6.13.1",
     "@pinia/nuxt": "^0.7.0",
     "@prisma/client": "^6.4.1",
     "@radix-icons/vue": "^1.0.0",
@@ -38,7 +42,7 @@
     "@tanstack/vue-table": "^8.21.2",
     "@unovis/ts": "1.4.3-beta.0",
     "@unovis/vue": "1.4.3-beta.0",
-    "@vee-validate/zod": "^4.14.7",
+    "@vee-validate/zod": "^4.15.0",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/core": "^11.3.0",
     "@vueuse/nuxt": "^11.3.0",
@@ -47,10 +51,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-vue": "^8.5.1",
+    "eslint": "^9.19.0",
     "lucide-vue-next": "^0.477.0",
+    "nodemailer": "^6.10.0",
     "nuxt": "^3.14.159",
+    "nuxt-nodemailer": "^1.1.2",
     "nuxt-security": "^2.0.0",
     "pinia": "^2.3.0",
+    "prisma": "^6.4.1",
     "radix-vue": "^1.9.12",
     "reka-ui": "^2.0.2",
     "shadcn-nuxt": "^0.10.4",
@@ -60,25 +68,17 @@
     "tailwindcss-animate": "^1.0.7",
     "v-calendar": "^3.1.2",
     "vaul-vue": "^0.2.0",
-    "vee-validate": "^4.14.7",
+    "vee-validate": "^4.15.0",
     "vitest": "^2.1.8",
     "vue": "latest",
     "vue-dompurify-html": "^5.2.0",
     "vue-router": "latest",
     "vue-sonner": "^1.3.0",
-    "zod": "^3.23.8",
-    "@nuxt/icon": "^1.10.3",
-    "@nuxtjs/color-mode": "^3.5.2",
-    "nuxt-nodemailer": "^1.1.2",
-    "eslint": "^9.19.0",
-    "@nuxtjs/tailwindcss": "^6.13.1",
-    "nodemailer": "^6.10.0",
-    "prisma": "^6.4.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@nuxt/test-utils": "^3.15.4",
-    "@types/bcrypt": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vitejs/plugin-vue": "^5.2.1",
