--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -7,6 +7,7 @@
     "devtools:on": "npx nuxi@latest devtools enable",
     "devtools:off": "npx nuxi@latest devtools disable",
     "test": "vitest",
+    "test:coverage": "vitest --coverage",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -43,7 +44,6 @@
     "@unovis/ts": "1.4.3-beta.0",
     "@unovis/vue": "1.4.3-beta.0",
     "@vee-validate/zod": "^4.15.0",
-    "@vue/test-utils": "^2.4.6",
     "@vueuse/core": "^11.3.0",
     "@vueuse/nuxt": "^11.3.0",
     "better-auth": "^1.2.2",
@@ -69,7 +69,6 @@
     "v-calendar": "^3.1.2",
     "vaul-vue": "^0.2.0",
     "vee-validate": "^4.15.0",
-    "vitest": "^2.1.8",
     "vue": "latest",
     "vue-dompurify-html": "^5.2.0",
     "vue-router": "latest",
@@ -78,15 +77,20 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@nuxt/test-utils": "^3.15.4",
+    "@nuxt/test-utils": "^3.17.1",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/coverage-v8": "^3.0.8",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
+    "happy-dom": "^17.4.4",
     "jsdom": "^25.0.1",
+    "playwright-core": "^1.51.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.10",
     "vite": "^6.2.0",
+    "vitest": "^3.0.8",
     "vue-tsc": "^2.2.8"
   },
   "packageManager": "pnpm@9.15.4",
