--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -24,7 +24,6 @@
     "seed": "node prisma/seed.mjs"
   },
   "dependencies": {
-    "@node-rs/argon2": "^1.8.0",
     "@nuxt/eslint": "^1.0.0",
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "^1.10.3",
@@ -81,17 +80,16 @@
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vitest/coverage-v8": "^3.0.8",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
     "happy-dom": "^17.4.4",
-    "jsdom": "^25.0.1",
     "playwright-core": "^1.51.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.10",
     "vite": "^6.2.0",
-    "vitest": "^3.0.8",
-    "vue-tsc": "^2.2.8"
+    "vitest": "^2.1.8",
+    "vue-tsc": "^2.2.8",
+    "@vitest/coverage-v8": "^2.1.8"
   },
   "packageManager": "pnpm@9.15.4",
   "engines": {
