--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -7,7 +7,7 @@
     "devtools:on": "npx nuxi@latest devtools enable",
     "devtools:off": "npx nuxi@latest devtools disable",
     "test": "vitest",
-    "test:coverage": "vitest --coverage",
+    "test:coverage": "vitest --coverage --ui",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -80,6 +80,8 @@
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "2.1.9",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
     "happy-dom": "^17.4.4",
@@ -88,8 +90,7 @@
     "prettier-plugin-tailwindcss": "^0.6.10",
     "vite": "^6.2.0",
     "vitest": "^2.1.8",
-    "vue-tsc": "^2.2.8",
-    "@vitest/coverage-v8": "^2.1.8"
+    "vue-tsc": "^2.2.8"
   },
   "packageManager": "pnpm@9.15.4",
   "engines": {
