--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -74,11 +74,11 @@
     "vue-dompurify-html": "^5.2.0",
     "vue-router": "latest",
     "vue-sonner": "^1.3.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "@nuxt/test-utils": "^3.17.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@nuxt/test-utils": "^3.15.4",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vitejs/plugin-vue": "^5.2.1",
