--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -28,6 +28,7 @@
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.9.0",
+    "@nuxt/test-utils": "^3.17.1",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/i18n": "9.0.0",
     "@nuxtjs/seo": "2.0.0-rc.23",
@@ -72,24 +73,25 @@
     "vue-dompurify-html": "^5.2.0",
     "vue-router": "latest",
     "vue-sonner": "^1.3.0",
-    "zod": "^3.24.2",
-    "@nuxt/test-utils": "^3.17.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "2.1.9",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
+    "eslint-plugin-vue": "^10.0.0",
     "happy-dom": "^17.4.4",
     "playwright-core": "^1.51.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.10",
     "vite": "^6.2.0",
     "vitest": "^2.1.8",
+    "vue-eslint-parser": "^10.1.1",
     "vue-tsc": "^2.2.8"
   },
   "packageManager": "pnpm@9.15.4",
