--- a/package.json
+++ b/package.json
@@ -1,12 +1,102 @@
 {
-  "name": "portfolio-generator",
-  "version": "1.0.0",
+  "name": "nuxt",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "bash ./scripts/dev.sh",
-    "prod": "bash ./scripts/prod.sh"
+    "dev": "nuxt dev",
+    "devtools:on": "npx nuxi@latest devtools enable",
+    "devtools:off": "npx nuxi@latest devtools disable",
+    "test": "vitest",
+    "test:coverage": "vitest --coverage --ui",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
+    "lint": "pnpm linter && pnpm formater",
+    "linter": "eslint .",
+    "formater": "prettier . --check",
+    "lintfix": "eslint . --fix && prettier . --write --list-different",
+    "linter-fix": "eslint . --fix",
+    "formater-fix": "prettier . --write --list-different",
+    "build": "nuxt build",
+    "start": "node .output/server/index.mjs"
   },
-  "packageManager": "pnpm@9.10.0",
+  "prisma": {
+    "seed": "node prisma/seed.mjs"
+  },
+  "dependencies": {
+    "@nuxt/eslint": "^1.0.0",
+    "@nuxt/fonts": "^0.10.3",
+    "@nuxt/icon": "^1.10.3",
+    "@nuxt/image": "^1.9.0",
+    "@nuxt/test-utils": "^3.17.1",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/i18n": "9.0.0",
+    "@nuxtjs/seo": "2.0.0-rc.23",
+    "@nuxtjs/sitemap": "6.1.5",
+    "@nuxtjs/tailwindcss": "^6.13.1",
+    "@pinia/nuxt": "^0.7.0",
+    "@prisma/client": "^6.4.1",
+    "@radix-icons/vue": "^1.0.0",
+    "@radix-ui/colors": "^3.0.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/vue-table": "^8.21.2",
+    "@unovis/ts": "1.4.3-beta.0",
+    "@unovis/vue": "1.4.3-beta.0",
+    "@vee-validate/zod": "^4.15.0",
+    "@vueuse/core": "^11.3.0",
+    "@vueuse/nuxt": "^11.3.0",
+    "better-auth": "^1.2.2",
+    "better-sqlite3": "^11.6.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-vue": "^8.5.1",
+    "eslint": "^9.19.0",
+    "lucide-vue-next": "^0.477.0",
+    "nodemailer": "^6.10.0",
+    "nuxt": "^3.14.159",
+    "nuxt-nodemailer": "^1.1.2",
+    "nuxt-security": "^2.0.0",
+    "pinia": "^2.3.1",
+    "prisma": "^6.4.1",
+    "radix-vue": "^1.9.12",
+    "reka-ui": "^2.0.2",
+    "shadcn-nuxt": "^0.10.4",
+    "tailwind-merge": "^2.6.0",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
+    "v-calendar": "^3.1.2",
+    "vaul-vue": "^0.2.0",
+    "vee-validate": "^4.15.0",
+    "vue": "latest",
+    "vue-dompurify-html": "^5.2.0",
+    "vue-router": "latest",
+    "vue-sonner": "^1.3.0",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@intlify/message-compiler": "^11.1.2",
+    "@intlify/shared": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.22.0",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "2.1.9",
+    "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.20",
+    "eslint-plugin-vue": "^10.0.0",
+    "happy-dom": "^17.4.4",
+    "playwright-core": "^1.51.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.10",
+    "vite": "^6.2.0",
+    "vitest": "^2.1.8",
+    "vue-eslint-parser": "^10.1.1",
+    "vue-tsc": "~2.1.6"
+  },
+  "packageManager": "pnpm@9.15.4",
   "engines": {
     "node": ">=20.14.0",
     "pnpm": ">=9"
