--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -55,6 +55,7 @@
     "lucide-vue-next": "^0.477.0",
     "nodemailer": "^6.10.0",
     "nuxt": "^3.14.159",
+    "nuxt-color-picker": "^1.2.7",
     "nuxt-nodemailer": "^1.1.2",
     "nuxt-security": "^2.0.0",
     "pinia": "^2.3.1",
