--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -74,6 +74,7 @@
     "vue-dompurify-html": "^5.2.0",
     "vue-router": "latest",
     "vue-sonner": "^1.3.0",
+    "vuedraggable": "^4.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
